--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "offline-plugin": "^3.4.2",
     "react-hot-loader": "^3.0.0-beta.4",
     "react-mdl": "^1.7.2",
-    "react-router": "^2.8.1",
+    "react-router": "^4.0.0-alpha.3",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.22",
     "webpack-dev-server": "^2.1.0-beta.4"
