--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.14.0",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "clean-webpack-plugin": "^0.1.10",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.11",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "html-webpack-plugin": "^2.22.0",
     "offline-plugin": "^3.4.2",
-    "react-hot-loader": "^3.0.0-beta.4",
-    "react-mdl": "^1.7.2",
-    "react-router": "^4.0.0-alpha.3",
+    "react-hot-loader": "^3.0.0-beta.5",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-server": "^2.1.0-beta.4"
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.8"
   },
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-mdl": "^1.7.2",
+    "react-router": "^4.0.0-alpha.4"
   }
 }
