--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-jest": "^16.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-core": "^6.18.2",
+    "babel-jest": "^17.0.2",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "clean-webpack-plugin": "^0.1.13",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "html-webpack-plugin": "^2.22.0",
-    "jest": "^16.0.1",
+    "clean-webpack-plugin": "^0.1.14",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.0",
+    "html-webpack-plugin": "^2.24.1",
+    "jest": "^17.0.3",
     "offline-plugin": "^3.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-test-renderer": "^15.4.0-rc.4",
+    "react-test-renderer": "^15.4.1",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.9"
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
-    "react": "^15.4.0-rc.4",
-    "react-dom": "^15.4.0-rc.4",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-mdl": "^1.7.2",
-    "react-router": "^4.0.0-alpha.4"
+    "react-router": "^4.0.0-alpha.6"
   }
 }
