Update react router

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     ["es2015", {"modules": false}],
     "react"
   ],
+  "plugins": ["transform-object-rest-spread"],
   "env": {
     "development": {
       "plugins": ["react-hot-loader/babel"]
