--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-jest": "^17.0.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "clean-webpack-plugin": "^0.1.14",
+    "babel-core": "^6.22.1",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
-    "html-webpack-plugin": "^2.24.1",
-    "jest": "^17.0.3",
-    "offline-plugin": "^4.5.3",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^18.1.0",
+    "offline-plugin": "^4.6.1",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-test-renderer": "^15.4.1",
+    "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-server": "^2.1.0-beta.12"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
-    "react-router": "^4.0.0-alpha.6"
+    "react-router-dom": "^4.0.0-beta.5"
   }
 }
